samples/_failures_safe/1761129940_8a19bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1154be11.c: In function ‘print_sample_entries’:
./samples/SAFE/__tmp_1154be11.c:137:22: error: expected ‘,’ or ‘;’ at end of input
  137 |         const struct LogEntry *entry = &analyzer
      |                      ^~~~~~~~
./samples/SAFE/__tmp_1154be11.c:137:22: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1154be11.c:137:22: error: expected declaration or statement at end of input
